--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
 <!--[if (gte IE 8)|!(IE)]><!--><html class="no-js" lang="en"> <!--<![endif]-->
 <head>
 
+   <script type="text/javascript">
+      function calcHeight()
+      {
+       //find the height of the internal page
+       var the_height=
+       document.getElementById('the_iframe').contentWindow.
+       document.body.scrollHeight;
+
+       //change the height of the iframe
+       document.getElementById('the_iframe').height=
+       the_height;
+      }
+   </script>
+
+
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
@@ -21,6 +36,7 @@
    <link rel="stylesheet" href="css/layout.css">
    <link rel="stylesheet" href="css/media-queries.css">
    <link rel="stylesheet" href="css/magnific-popup.css">
+
 
    <!-- Script
    ================================================== -->
@@ -57,9 +73,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">Youssef Ibrahim</h1>
-            <h3>I'm a Manila based <span>graphic designer</span>, <span>illustrator</span> and <span>webdesigner</span> creating awesome and
-            effective visual identities for companies of all sizes around the globe. Let's <a class="smoothscroll" href="#about">start scrolling</a>
-            and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
+            <h3>I'm a Canada based <a href="https://uwaterloo.ca/electrical-computer-engineering/">UW</a> <span>engineering student</span>, <span>software developer</span> and <span>web designer</span> interested in connecting the world through my computer screen. Feel free to learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
                <li><a href="https://github.com/youssefibrahim"><i class="fa fa-github-square"></i></a></li>
@@ -86,7 +100,7 @@
 
          <div class="three columns">
 
-            <img class="profile-pic"  src="images/profilepic.jpg" alt="" />
+            <img class="profile-pic"  src="images/profilepic1.jpg" alt="" />
 
          </div>
 
@@ -94,29 +108,12 @@
 
             <h2>About Me</h2>
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
+            <p>I am a 21 year old student, studying Electrical Engineering at the University of Waterloo in Canada. Previous to university, I had began minmal programming throughout high school, allowing me to learn scripting languages and implementing them to create basic functional programs. When I had reached university, I then began to learn object-oriented programming throughout my curriculum and grew an interest in pursuing a job to apply my growing knowledge. With personal projects and work experience, I have found that my love for software has continued to grow exponentially and refused to stop. </p>
+            <p>
+            Continously learning new technologies is difficult as I want to pursue my Electrical Engineering degree, but also require growing knowledge of software to pursue my career interests. Much of my software knowledge today is therefore self-taught through projects or my past experiences and continues to be done this way.
             </p>
 
             <div class="row">
-
-               <div class="columns contact-details">
-
-                  <h2>Contact Details</h2>
-                  <p class="address">
-                     <span>Jonathan Doe</span><br>
-                     <span>1600 Amphitheatre Parkway<br>
-                           Mountain View, CA 94043 US
-                     </span><br>
-                     <span>(123)456-7890</span><br>
-                     <span>anyone@website.com</span>
-                  </p>
-
-               </div>
 
                <div class="columns download">
                   <p>
@@ -151,39 +148,22 @@
 
                <div class="twelve columns">
 
-                  <h3>University of Life</h3>
-                  <p class="info">Master in Graphic Design <span>&bull;</span> <em class="date">April 2007</em></p>
+                  <h3>University of Waterloo</h3>
+                  <p class="info">B.A.Sc in Electrical Engineering <span>&bull;</span> <em class="date">Present</em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+                  While majoring in Electrical Engineering at the University of Waterloo, I have been given the opportunity to broaden my academic spectrum by not only learning in accordance to my major but major of Computer Engineering as well. Having the capability to take courses not in path with my major has given me the opportunity to take courses such as data structures and algorithms (<a href="https://ece.uwaterloo.ca/~dwharder/aads/Outline/">ECE 250</a>) allowing me to grow my interest within development continously.
                   </p>
 
                </div>
+                  
+               <iframe id="the_iframe" width="100%" src="list.html" onLoad="calcHeight();" height='270px' background-color="white"frameborder="0"></iframe>
 
             </div> <!-- item end -->
 
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3>School of Cool Designers</h3>
-                  <p class="info">B.A. Degree in Graphic Design <span>&bull;</span> <em class="date">March 2003</em></p>
-
-                  <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
-                  </p>
-
-               </div>
-
-            </div> <!-- item end -->
 
          </div> <!-- main-col end -->
+
 
       </div> <!-- End Education -->
 
@@ -202,9 +182,9 @@
 
                <div class="twelve columns">
 
-                  <h3>Awesome Design Studio</h3>
-                  <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
-
+                  <h3>Amplify Education</h3>
+                  <p class="info">Software Developer <span>&bull;</span> <em class="date">September 2014 - December 2014</em></p>
+                  <p id="place"> New York City, New York </p>
                   <p>
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
                   Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
@@ -220,9 +200,23 @@
 
                <div class="twelve columns">
 
-                  <h3>Super Cool Studio</h3>
-                  <p class="info">UX Designer <span>&bull;</span> <em class="date">March 2007 - February 2010</em></p>
+                  <h3>Barrow Technology Solutions</h3>
+                  <p class="info">Technology Operations Consultant <span>&bull;</span> <em class="date">January - April 2014</em></p>
+                  <p id="place">Toronto, Ontario</p>
+                  <p>
+                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
+                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
+                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
+                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                  </p>
 
+               </div>
+
+               <div class="twelve columns">
+
+                  <h3>Canadian Tire Inc.</h3>
+                  <p class="info">Retail Process Analyst <span>&bull;</span> <em class="date">June - August 2013</em></p>
+                  <p id="place">Toronto, Ontario</p>
                   <p>
                   This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
                   Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
