--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                <div class="twelve columns">
 
                   <h3>Amplify Education</h3>
-                  <p class="info">Software Developer <span>&bull;</span> <em class="date">September 2014 - December 2014</em></p>
+                  <p class="info">Software Developer <span>&bull;</span> <em class="date">September - December 2014</em></p>
                   <p id="place"> New York City, New York </p>
                   <p>
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -216,6 +216,21 @@
 
                   <h3>Canadian Tire Inc.</h3>
                   <p class="info">Retail Process Analyst <span>&bull;</span> <em class="date">June - August 2013</em></p>
+                  <p id="place">Toronto, Ontario</p>
+                  <p>
+                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
+                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
+                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
+                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                  </p>
+
+               </div>
+
+
+               <div class="twelve columns">
+
+                  <h3>Thru Frame Studios</h3>
+                  <p class="info">Co-Founder & Manager of Operations <span>&bull;</span> <em class="date">March - August 2013</em></p>
                   <p id="place">Toronto, Ontario</p>
                   <p>
                   This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
@@ -667,10 +682,7 @@
 
             <div class="ten columns">
 
-                  <p class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-                  eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-                  voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-                  </p>
+                  <p class="lead">If you're interested in chatting, feel free to just shoot me an email with the form below.</p>
 
             </div>
 
@@ -715,55 +727,13 @@
                </form> <!-- Form End -->
 
                <!-- contact-warning -->
-               <div id="message-warning"> Error boy</div>
+               <div id="message-warning"> Error</div>
                <!-- contact-success -->
                <div id="message-success">
                   <i class="fa fa-check"></i>Your message was sent, thank you!<br>
                </div>
 
             </div>
-
-
-            <aside class="four columns footer-widgets">
-
-               <div class="widget widget_contact">
-
-                  <h4>Address and Phone</h4>
-                  <p class="address">
-                     Jonathan Doe<br>
-                     1600 Amphitheatre Parkway <br>
-                     Mountain View, CA 94043 US<br>
-                     <span>(123) 456-7890</span>
-                  </p>
-
-               </div>
-
-               <div class="widget widget_tweets">
-
-                  <h4 class="widget-title">Latest Tweets</h4>
-
-                  <ul id="twitter">
-                     <li>
-                        <span>
-                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                        Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum
-                        <a href="#">http://t.co/CGIrdxIlI3</a>
-                        </span>
-                        <b><a href="#">2 Days Ago</a></b>
-                     </li>
-                     <li>
-                        <span>
-                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-                        eaque ipsa quae ab illo inventore veritatis et quasi
-                        <a href="#">http://t.co/CGIrdxIlI3</a>
-                        </span>
-                        <b><a href="#">3 Days Ago</a></b>
-                     </li>
-                  </ul>
-
-               </div>
-
-            </aside>
 
       </div>
 
@@ -779,18 +749,15 @@
          <div class="twelve columns">
 
             <ul class="social-links">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <li><a href="https://github.com/youssefibrahim"><i class="fa fa-github-square"></i></a></li>
+               <li><a href="https://ca.linkedin.com/in/youssefmibrahim"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.facebook.com/youssef.medhat"><i class="fa fa-facebook"></i></a></li>
+               <li><a href="https://twitter.com/youssefmibrahim"><i class="fa fa-twitter"></i></a></li>
+               <li><a href="https://instagram.com/ymedhat/"><i class="fa fa-instagram"></i></a></li>
             </ul>
 
             <ul class="copyright">
-               <li>&copy; Copyright 2014 CeeVee</li>
-               <li>Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>   
+               <li>&copy; Copyright 2015 Youssef M. Ibrahim</li>  
             </ul>
 
          </div>
