Edited text as well as Contact section

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 
             <h2>About Me</h2>
 
-            <p>I am a 21 year old student, studying Electrical Engineering at the University of Waterloo in Canada. Previous to university, I had began minmal programming throughout high school, allowing me to learn scripting languages and implementing them to create basic functional programs. When I had reached university, I then began to learn object-oriented programming throughout my curriculum and grew an interest in pursuing a job to apply my growing knowledge. With personal projects and work experience, I have found that my love for software has continued to grow exponentially and refused to stop. </p>
-            <p>
+            <p align="justify">I am a 21 year old student, studying Electrical Engineering at the University of Waterloo in Canada. Previous to university, I had began minmal programming throughout high school, allowing me to learn scripting languages and implementing them to create basic functional programs. When I had reached university, I then began to learn object-oriented programming throughout my curriculum and grew an interest in pursuing a job to apply my growing knowledge. With personal projects and work experience, I have found that my love for software has continued to grow exponentially and refused to stop. </p>
+            <p align="justify">
             Continously learning new technologies is difficult as I want to pursue my Electrical Engineering degree, but also require growing knowledge of software to pursue my career interests. Much of my software knowledge today is therefore self-taught through projects or my past experiences and continues to be done this way.
             </p>
 
@@ -151,7 +151,7 @@
                   <h3>University of Waterloo</h3>
                   <p class="info">B.A.Sc in Electrical Engineering <span>&bull;</span> <em class="date">Present</em></p>
 
-                  <p>
+                  <p align="justify">
                   While majoring in Electrical Engineering at the University of Waterloo, I have been given the opportunity to broaden my academic spectrum by not only learning in accordance to my major but major of Computer Engineering as well. Having the capability to take courses not in path with my major has given me the opportunity to take courses such as data structures and algorithms (<a href="https://ece.uwaterloo.ca/~dwharder/aads/Outline/">ECE 250</a>) allowing me to grow my interest within development continously.
                   </p>
 
@@ -182,16 +182,12 @@
 
                <div class="twelve columns">
 
-                  <h3>Amplify Education</h3>
+                  <h3><a href="http://www.amplify.com/">Amplify Education</a></h3>
                   <p class="info">Software Developer <span>&bull;</span> <em class="date">September - December 2014</em></p>
                   <p id="place"> New York City, New York </p>
-                  <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+                  <p align="justify">
+                  Throughout this co-op experience, I was put in charge of multiple tasks which included but were not limited to; restructuring and creating new Selenium tests for a web app, as well as producing python scripts to retrieve and edit student data according to business intelligence. While readjusting, analyzing and creating new data, I was able to enhance my data analysis and data management knowledge with the use of minor SQL and production of scripts, which some of which are still used today within the company.
                   </p>
-
                </div>
 
             </div> <!-- item end -->
@@ -200,28 +196,22 @@
 
                <div class="twelve columns">
 
-                  <h3>Barrow Technology Solutions</h3>
+                  <h3><a href="http://barrowts.com/">Barrow Technology Solutions</a></h3>
                   <p class="info">Technology Operations Consultant <span>&bull;</span> <em class="date">January - April 2014</em></p>
                   <p id="place">Toronto, Ontario</p>
-                  <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                  <p align="justify">
+                  As Barrow Technology Solutions was a startup engaged in <a href="http://www.sap.com/canada/index.html">SAP</a> Process Integration, this position was focused on both technical and business aspects of the company. Technically I aided in the advencments of basic SAP architecture, maintained the company website, as well as produced an internal web site with authentication for contractors. The internal website was implemented for contractors to stay up to date with on-going projects as well as to be informed of new technical updates. On the business aspect I was required to expand the company by creating product and services documentation, improve online presence on LinkedIn, and reach out to potential partners as well as future clients. 
                   </p>
 
                </div>
 
                <div class="twelve columns">
 
-                  <h3>Canadian Tire Inc.</h3>
+                  <h3><a href="http://www.canadiantire.ca/en.html">Canadian Tire Inc.</a></h3>
                   <p class="info">Retail Process Analyst <span>&bull;</span> <em class="date">June - August 2013</em></p>
                   <p id="place">Toronto, Ontario</p>
-                  <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                  <p align="justify">
+                  With previous experience working on the sales floor of a local Canadian Tire store, I was placed in charge of the new replenishment software design which would be used by Canadian Tire employees across 200 stores. This co-op was split into three parts; initially gathering research data, secondly produce a conceptual design, and lastly beta test the software with multiple stores. As I aided in the design, I produced multiple presentations which were demonstrated to the Technology Committee at the Canadian Tire Corporation headquarters. After finalizing the design with the committee, I was then able to test, and support multiple stores in beta testing the software to reach it's current design.
                   </p>
 
                </div>
@@ -232,11 +222,8 @@
                   <h3>Thru Frame Studios</h3>
                   <p class="info">Co-Founder & Manager of Operations <span>&bull;</span> <em class="date">March - August 2013</em></p>
                   <p id="place">Toronto, Ontario</p>
-                  <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                  <p align="justify">
+                  Thru Frame Studios was co-founded by my brother and myself as a photography business working within Hamilton and Toronto regions. Due to photography being a large hobby of ours, we had decided to pursue it into a business. Initially working with small projects such as producing professional LinkedIn photos for students, we were able to produce a large enough portfolio allowing us to work with larger clients. One of the larger clients throughout my time at the company had requested weekly photoshoots as well as marketing material for events. I unfortunaly was forced to leave the company due to academic reasons, but Thru Studios is still on going and is run by my brother <a href="http://www.hanymdibrahim.com/">Hany</a>.
                   </p>
 
                </div>
@@ -583,38 +570,6 @@
    </section> <!-- Portfolio Section End-->
 
 
-   <!-- Call-To-Action Section
-   ================================================== -->
-   <section id="call-to-action">
-
-      <div class="row">
-
-         <div class="two columns header-col">
-
-            <h1><span>Get Hosting.</span></h1>
-
-         </div>
-
-         <div class="seven columns">
-
-            <h2><a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Host This Template on Dreamhost.</a></h2>
-            <p>Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"><span>DreamHost</span></a>.
-               Get <span>$50 off</span> when you sign up with the promocode <span>STYLESHOUT</span>. 
-               <!-- Simply type  the promocode in the box labeled “Promo Code” when placing your order. --></p>
-
-         </div>
-
-         <div class="three columns action">
-
-            <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Sign Up Now</a>
-
-         </div>
-
-      </div>
-
-   </section> <!-- Call-To-Action Section End-->
-
-
    <!-- Testimonials Section
    ================================================== -->
    <section id="testimonials">
@@ -637,21 +592,16 @@
 
                      <li>
                         <blockquote>
-                           <p>Your work is going to fill a large part of your life, and the only way to be truly satisfied is
-                           to do what you believe is great work. And the only way to do great work is to love what you do.
-                           If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
+                           <p>It was a pleasure having Youssef on the team. He was able to jump right in and contribute to our projects. Youssef is a hard worker and was a joy to work with and got along very well with everyone he encountered.
                            </p>
-                           <cite>Steve Jobs</cite>
+                           <cite>Sejin Kim, Technical Lead at Amplify Education</cite>
                         </blockquote>
                      </li> <!-- slide ends -->
 
                      <li>
                         <blockquote>
-                           <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                           Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                           nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
-                           </p>
-                           <cite>Mr. Adobe</cite>
+                           <p>I was impressed with Youssef's ability to understand new iterations of the system, and disseminate the information to a large base of employees in a quick and professional manner - an important task during the testing phase of the new technology. Youssef managed the creation of a key presentation to the Technology committee at Canadian Tire Corporation regarding future enhancements. It was a pleasure working with Youssef.</p>
+                           <cite>Greg Honour, General Manager at Canadian Tire</cite>
                         </blockquote>
                      </li> <!-- slide ends -->
 
@@ -671,19 +621,25 @@
    <!-- Contact Section
    ================================================== -->
    <section id="contact">
-
+   <h2 class="hcontact">Contact</h2>
          <div class="row section-head">
 
-            <div class="two columns header-col">
+            <div class="container">
 
-               <h1><span>Get In Touch.</span></h1>
-
-            </div>
-
-            <div class="ten columns">
-
-                  <p class="lead">If you're interested in chatting, feel free to just shoot me an email with the form below.</p>
-
+                  <div class="leftcol">
+                     <ul>
+                        <li><a href="mailto:youssefibrahim@gmail.com" class="fa fa-envelope"> Email</a></li>
+                        <li><a href="https://github.com/youssefibrahim" class="fa fa-github-square"> Github</a></li>
+                        <li><a href="https://ca.linkedin.com/in/youssefmibrahim" class="fa fa-linkedin"> LinkedIn</a></li>
+                     </ul>
+                  </div>
+                  <div class="rightcol">
+                     <ul>
+                        <li><a href="https://www.facebook.com/youssef.medhat" class="fa fa-facebook"> Facebook</a></li>
+                        <li><a href="https://twitter.com/youssefmibrahim" class="fa fa-twitter"> Twitter</a></li>
+                        <li><a href="https://instagram.com/ymedhat/" class="fa fa-instagram"> Instagram</a></li>
+                     </ul>
+                  </div>
             </div>
 
          </div>
@@ -692,45 +648,6 @@
 
             <div class="eight columns">
 
-               <!-- form -->
-               <form action="" method="post" id="contactForm" name="contactForm">
-               <fieldset>
-
-                  <div>
-                     <label for="contactName">Name <span class="required">*</span></label>
-                     <input type="text" value="" size="35" id="contactName" name="contactName">
-                  </div>
-
-                  <div>
-                     <label for="contactEmail">Email <span class="required">*</span></label>
-                     <input type="text" value="" size="35" id="contactEmail" name="contactEmail">
-                  </div>
-
-                  <div>
-                     <label for="contactSubject">Subject</label>
-                     <input type="text" value="" size="35" id="contactSubject" name="contactSubject">
-                  </div>
-
-                  <div>
-                     <label for="contactMessage">Message <span class="required">*</span></label>
-                     <textarea cols="50" rows="15" id="contactMessage" name="contactMessage"></textarea>
-                  </div>
-
-                  <div>
-                     <button class="submit">Submit</button>
-                     <span id="image-loader">
-                        <img alt="" src="images/loader.gif">
-                     </span>
-                  </div>
-
-               </fieldset>
-               </form> <!-- Form End -->
-
-               <!-- contact-warning -->
-               <div id="message-warning"> Error</div>
-               <!-- contact-success -->
-               <div id="message-success">
-                  <i class="fa fa-check"></i>Your message was sent, thank you!<br>
                </div>
 
             </div>
@@ -748,13 +665,7 @@
 
          <div class="twelve columns">
 
-            <ul class="social-links">
-               <li><a href="https://github.com/youssefibrahim"><i class="fa fa-github-square"></i></a></li>
-               <li><a href="https://ca.linkedin.com/in/youssefmibrahim"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="https://www.facebook.com/youssef.medhat"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="https://twitter.com/youssefmibrahim"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="https://instagram.com/ymedhat/"><i class="fa fa-instagram"></i></a></li>
-            </ul>
+
 
             <ul class="copyright">
                <li>&copy; Copyright 2015 Youssef M. Ibrahim</li>  
