Removed error margin to the right on mobile, as well as edited testimonials to be static size

--- a/list.html
+++ b/list.html
@@ -19,42 +19,42 @@
                      <div data-role="collapsible">
                      <h4>First Year</h4>
                      <ul data-role="listview">
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-ECE.html#ECE103">ECE 103 Discrete Mathematics</a></li>
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-ECE.html#ECE105">ECE 105 Physics for Electrical Engineering</a></li>
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-ECE.html#ECE106">ECE 106 Physics for Electrical Engineering 2</a></li>
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-ECE.html#ECE124">ECE 124 Digital Circuits and Systems</a></li>
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-ECE.html#ECE140">ECE 140 Linear Circuits</a></li>
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-ECE.html#ECE150">ECE 150 Fundamentals of Programming</a></li>
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-ECE.html#ECE124">CHE 102 Chemistry for Engineers</a></li>
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-MATH.html#MATH117">Math 117 Calculus 1 for Engineering</a></li>
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-MATH.html#MATH119">Math 119 Calculus 2 for Engineering</a></li>
+                       <li><strong>ECE 103 Discrete Mathematics</strong></li>
+                       <li><strong>ECE 105 Physics for Electrical Engineering</strong></li>
+                       <li><strong>ECE 106 Physics for Electrical Engineering 2</strong></li>
+                       <li><strong>ECE 124 Digital Circuits and Systems</strong></li>
+                       <li><strong>ECE 140 Linear Circuits</strong></li>
+                       <li><strong>ECE 150 Fundamentals of Programming</strong></li>
+                       <li><strong>CHE 102 Chemistry for Engineers</strong></li>
+                       <li><strong>Math 117 Calculus 1 for Engineering</strong></li>
+                       <li><strong>Math 119 Calculus 2 for Engineering</strong></li>
                      </ul>
                      </div>
 
                      <div data-role="collapsible">
                      <h4>Second Year</h4>
                      <ul data-role="listview">
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-ECE.html#ECE205">ECE 205 Advanced Calculus 1 for Electrical Engineers</a></li>
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-ECE.html#ECE206">ECE 206 Advanced Calculus 2 for Electrical Engineers</a></li>
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-ECE.html#ECE207">ECE 207 Signals and Systems</a></li>
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-ECE.html#ECE209">ECE 209 Electronic and Electrical Properties of Materials</a></li>
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-ECE.html#ECE222">ECE 222 Digital Computers</a></li>
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-ECE.html#ECE240">ECE 240 Electronic Circuits 1</a></li>
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-ECE.html#ECE242">ECE 242 Electronic Circuits 2</a></li>
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-ECE.html#ECE250">ECE 250 Algorithms and Data Structures</a></li>
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-ECE.html#ECE290">ECE 290 Engineering Profession, Ethics, and Law</a></li>
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/0708/COURSE/course-CLAS.html#CLAS201">CLAS 201 Ancient Greek Society</a></li>
+                       <li><strong>ECE 205 Advanced Calculus 1 for Electrical Engineers</strong></li>
+                       <li><strong>ECE 206 Advanced Calculus 2 for Electrical Engineers</strong></li>
+                       <li><strong>ECE 207 Signals and Systems</strong></li>
+                       <li><strong>ECE 209 Electronic and Electrical Properties of Materials</strong></li>
+                       <li><strong>ECE 222 Digital Computers</strong></li>
+                       <li><strong>ECE 240 Electronic Circuits 1</strong></li>
+                       <li><strong>ECE 242 Electronic Circuits 2</strong></li>
+                       <li><strong>ECE 250 Algorithms and Data Structures</strong></li>
+                       <li><strong>ECE 290 Engineering Profession, Ethics, and Law</strong></li>
+                       <li><strong>CLAS 201 Ancient Greek Society</strong></li>
                      </ul>
                      </div>
 
                      <div data-role="collapsible">
                      <h4>Third Year</h4>
                      <ul data-role="listview">
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-ECE.html#ECE205">ECE 316 Probability Theory and Statistics</a></li>
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-ECE.html#ECE206">ECE 380 Analog Control Systems</a></li>
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-ECE.html#ECE207">ECE 331 Electronic Devices</a></li>
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-ECE.html#ECE222">ECE 375 Electromagnetic Fields and Waves</a></li>
-                       <li><a href="http://www.ucalendar.uwaterloo.ca/1516/COURSE/course-PSYCH.html#PSYCH101">PSYCH 101 Introductory Psychology</a></li>
+                       <li><strong>ECE 316 Probability Theory and Statistics</strong></li>
+                       <li><strong>ECE 380 Analog Control Systems</strong></li>
+                       <li><strong>ECE 331 Electronic Devices</strong></li>
+                       <li><strong>ECE 375 Electromagnetic Fields and Waves</strong></li>
+                       <li><strong>PSYCH 101 Introductory Psychology</strong></li>
                      </ul>
                      </div>
 
