updated resume, and styling

--- a/index.html
+++ b/index.html
@@ -634,22 +634,25 @@
 
          <div class="row">
 
-            <div align="center"  id="leftcol" class="six columns">
+            <div align="center"  id="leftcol" class="four columns">
                      <ul>
-                        <li><a href="mailto:youssefibrahim@gmail.com" class="fa fa-envelope"> Email</a></li>
                         <li><a href="https://github.com/youssefibrahim" class="fa fa-github-square"> Github</a></li>
                         <li><a href="https://ca.linkedin.com/in/youssefmibrahim" class="fa fa-linkedin"> LinkedIn</a></li>
                      </ul>
             </div>   
             
-            <div align="center" id= "rightcol" class="six columns">
+            <div align="center" id= "centercol" class="four columns">
                      <ul>
+                        <li><a href="mailto:youssefibrahim@gmail.com" class="fa fa-envelope"> Email</a></li>
                         <li><a href="https://www.facebook.com/youssef.medhat" class="fa fa-facebook"> Facebook</a></li>
+                     </ul>
+            </div>     
+            <div align="center" id= "rightcol" class="four columns">
+                     <ul>
                         <li><a href="https://twitter.com/youssefmibrahim" class="fa fa-twitter"> Twitter</a></li>
                         <li><a href="https://instagram.com/ymedhat/" class="fa fa-instagram"> Instagram</a></li>
                      </ul>
             </div>     
-
 
          </div>
 
